Redoing Results section

--- a/tables/squares/square28.tex
+++ b/tables/squares/square28.tex
@@ -1,13 +1,15 @@
 \begin{table}[H]
     \begin{center}
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 50.32  & 44.92 & 52.69 & 47.05              \\            AQUA            & 32.88  & 29.36 & 34.92 & 31.18              \\            Complementary            & 12.47  & 11.14 & 12.33 & 11.01              \\            Davenport            & 25.36  & 22.64 & 24.97 & 22.29              \\            EKF            & 23.46  & 20.94 & 20.83 & 18.60              \\            FAMC            & 50.18  & 44.81 & 58.50 & 52.24              \\            FLAE            & 25.24  & 22.53 & 23.92 & 21.36              \\            Fourati            & 50.28  & 44.89 & 52.75 & 47.09              \\            Madgwick            & 26.25  & 23.43 & 23.30 & 20.80              \\            Mahony            & 23.04  & 20.57 & 22.19 & 19.81              \\            OLEQ            & 22.47  & 20.06 & 19.25 & 17.18              \\            QUEST            & 41.17  & 36.76 & 56.84 & 50.75              \\            ROLEQ            & 22.69  & 20.25 & 20.66 & 18.44              \\            SAAM            & 25.41  & 22.69 & 25.02 & 22.34              \\            Tilt            & 25.41  & 22.69 & 25.02 & 22.34              \\
-            \hline
-            Average & 30.44 & 27.18 & 31.55 & 28.17
-        \end{tabular}
+        \resizebox{1\linewidth}{!}{
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 50.32                   & 44.92                  & 52.69           & 47.05          \\            AQUA            & 32.88  & 29.36 & 34.92 & 31.18              \\            Complementary            & 12.47  & 11.14 & 12.33 & 11.01              \\            Davenport            & 25.36  & 22.64 & 24.97 & 22.29              \\            EKF            & 23.46  & 20.94 & 20.83 & 18.60              \\            FAMC            & 50.18  & 44.81 & 58.50 & 52.24              \\            FLAE            & 25.24  & 22.53 & 23.92 & 21.36              \\            Fourati            & 50.28  & 44.89 & 52.75 & 47.09              \\            Madgwick            & 26.25  & 23.43 & 23.30 & 20.80              \\            Mahony            & 23.04  & 20.57 & 22.19 & 19.81              \\            OLEQ            & 22.47  & 20.06 & 19.25 & 17.18              \\            QUEST            & 41.17  & 36.76 & 56.84 & 50.75              \\            ROLEQ            & 22.69  & 20.25 & 20.66 & 18.44              \\            SAAM            & 25.41  & 22.69 & 25.02 & 22.34              \\            Tilt            & 25.41  & 22.69 & 25.02 & 22.34              \\
+                \hline
+                Average     & 30.44                   & 27.18                  & 31.55           & 28.17
+            \end{tabular}
+        }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
     \end{center}
