--- a/tables/squares/square4.tex
+++ b/tables/squares/square4.tex
@@ -1,13 +1,15 @@
 \begin{table}[H]
     \begin{center}
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 5.88  & 36.74 & 7.29 & 45.58              \\            AQUA            & 3.86  & 24.15 & 4.81 & 30.06              \\            Complementary            & 1.32  & 8.28 & 1.92 & 11.99              \\            Davenport            & 1.42  & 8.86 & 1.75 & 10.91              \\            EKF            & 0.84  & 5.27 & 1.59 & 9.95              \\            FAMC            & 5.66  & 35.35 & 6.54 & 40.86              \\            FLAE            & 1.51  & 9.41 & 1.77 & 11.07              \\            Fourati            & 5.76  & 36.02 & 7.09 & 44.30              \\            Madgwick            & 2.46  & 15.35 & 2.78 & 17.36              \\            Mahony            & 0.26  & 1.63 & 0.33 & 2.08              \\            OLEQ            & 0.36  & 2.26 & 0.53 & 3.32              \\            QUEST            & 4.55  & 28.46 & 4.32 & 27.00              \\            ROLEQ            & 0.55  & 3.45 & 0.97 & 6.09              \\            SAAM            & 1.49  & 9.33 & 2.18 & 13.63              \\            Tilt            & 1.49  & 9.33 & 2.18 & 13.63              \\
-            \hline
-            Average & 2.50 & 15.59 & 3.07 & 19.19
-        \end{tabular}
+        \resizebox{1\linewidth}{!}{
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 5.88                    & 36.74                  & 7.29            & 45.58          \\            AQUA            & 3.86  & 24.15 & 4.81 & 30.06              \\            Complementary            & 1.32  & 8.28 & 1.92 & 11.99              \\            Davenport            & 1.42  & 8.86 & 1.75 & 10.91              \\            EKF            & 0.84  & 5.27 & 1.59 & 9.95              \\            FAMC            & 5.66  & 35.35 & 6.54 & 40.86              \\            FLAE            & 1.51  & 9.41 & 1.77 & 11.07              \\            Fourati            & 5.76  & 36.02 & 7.09 & 44.30              \\            Madgwick            & 2.46  & 15.35 & 2.78 & 17.36              \\            Mahony            & 0.26  & 1.63 & 0.33 & 2.08              \\            OLEQ            & 0.36  & 2.26 & 0.53 & 3.32              \\            QUEST            & 4.55  & 28.46 & 4.32 & 27.00              \\            ROLEQ            & 0.55  & 3.45 & 0.97 & 6.09              \\            SAAM            & 1.49  & 9.33 & 2.18 & 13.63              \\            Tilt            & 1.49  & 9.33 & 2.18 & 13.63              \\
+                \hline
+                Average     & 2.50                    & 15.59                  & 3.07            & 19.19
+            \end{tabular}
+        }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
     \end{center}
