--- a/tables/triangles/triangle28.tex
+++ b/tables/triangles/triangle28.tex
@@ -1,13 +1,15 @@
 \begin{table}[H]
     \begin{center}
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 21.96  & 26.15 & 38.76 & 46.15              \\            AQUA            & 6.64  & 7.91 & 15.91 & 18.94              \\            Complementary            & 14.51  & 17.27 & 17.72 & 21.09              \\            Davenport            & 9.67  & 11.51 & 8.61 & 10.25              \\            EKF            & 2.95  & 3.52 & 5.72 & 6.81              \\            FAMC            & 20.40  & 24.28 & 30.85 & 36.72              \\            FLAE            & 9.67  & 11.51 & 8.34 & 9.93              \\            Fourati            & 17.07  & 20.32 & 41.31 & 49.17              \\            Madgwick            & 9.29  & 11.06 & 9.42 & 11.22              \\            Mahony            & 2.85  & 3.39 & 5.48 & 6.52              \\            OLEQ            & 3.40  & 4.04 & 7.37 & 8.77              \\            QUEST            & 13.11  & 15.60 & 36.75 & 43.75              \\            ROLEQ            & 3.08  & 3.66 & 5.70 & 6.78              \\            SAAM            & 10.01  & 11.91 & 8.50 & 10.11              \\            Tilt            & 10.01  & 11.91 & 8.50 & 10.11              \\
-            \hline
-            Average & 10.31 & 12.27 & 16.59 & 19.75
-        \end{tabular}
+        \resizebox{1\linewidth}{!}{
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 21.96                   & 26.15                  & 38.76           & 46.15          \\            AQUA            & 6.64  & 7.91 & 15.91 & 18.94              \\            Complementary            & 14.51  & 17.27 & 17.72 & 21.09              \\            Davenport            & 9.67  & 11.51 & 8.61 & 10.25              \\            EKF            & 2.95  & 3.52 & 5.72 & 6.81              \\            FAMC            & 20.40  & 24.28 & 30.85 & 36.72              \\            FLAE            & 9.67  & 11.51 & 8.34 & 9.93              \\            Fourati            & 17.07  & 20.32 & 41.31 & 49.17              \\            Madgwick            & 9.29  & 11.06 & 9.42 & 11.22              \\            Mahony            & 2.85  & 3.39 & 5.48 & 6.52              \\            OLEQ            & 3.40  & 4.04 & 7.37 & 8.77              \\            QUEST            & 13.11  & 15.60 & 36.75 & 43.75              \\            ROLEQ            & 3.08  & 3.66 & 5.70 & 6.78              \\            SAAM            & 10.01  & 11.91 & 8.50 & 10.11              \\            Tilt            & 10.01  & 11.91 & 8.50 & 10.11              \\
+                \hline
+                Average     & 10.31                   & 12.27                  & 16.59           & 19.75
+            \end{tabular}
+        }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
     \end{center}
