--- a/tables/triangles/triangle4.tex
+++ b/tables/triangles/triangle4.tex
@@ -1,13 +1,15 @@
 \begin{table}[H]
     \begin{center}
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 2.36  & 19.70 & 8.02 & 66.85              \\            AQUA            & 2.05  & 17.09 & 8.48 & 70.67              \\            Complementary            & 0.79  & 6.56 & 3.47 & 28.93              \\            Davenport            & 2.10  & 17.53 & 2.77 & 23.08              \\            EKF            & 1.05  & 8.78 & 2.89 & 24.12              \\            FAMC            & 0.50  & 4.20 & 7.09 & 59.12              \\            FLAE            & 2.11  & 17.57 & 2.76 & 23.03              \\            Fourati            & 2.63  & 21.90 & 7.62 & 63.48              \\            Madgwick            & 1.64  & 13.66 & 2.29 & 19.09              \\            Mahony            & 0.77  & 6.38 & 2.87 & 23.96              \\            OLEQ            & 0.76  & 6.29 & 3.10 & 25.81              \\            QUEST            & 2.00  & 16.69 & 6.87 & 57.27              \\            ROLEQ            & 0.65  & 5.44 & 3.36 & 27.96              \\            SAAM            & 2.11  & 17.56 & 2.88 & 24.01              \\            Tilt            & 2.11  & 17.56 & 2.88 & 24.01              \\
-            \hline
-            Average & 1.58 & 13.13 & 4.49 & 37.43
-        \end{tabular}
+        \resizebox{1\linewidth}{!}{
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 4.50                    & 37.47                  & 6.51            & 54.28          \\            AQUA            & 2.91  & 24.24 & 5.66 & 47.18              \\            Complementary            & 0.85  & 7.08 & 1.46 & 12.14              \\            Davenport            & 0.93  & 7.75 & 1.36 & 11.35              \\            EKF            & 1.02  & 8.50 & 0.92 & 7.66              \\            FAMC            & 4.23  & 35.23 & 6.19 & 51.56              \\            FLAE            & 0.91  & 7.54 & 1.30 & 10.82              \\            Fourati            & 7.04  & 58.67 & 8.32 & 69.35              \\            Madgwick            & 2.05  & 17.05 & 2.02 & 16.81              \\            Mahony            & 0.92  & 7.69 & 1.38 & 11.52              \\            OLEQ            & 0.79  & 6.57 & 1.02 & 8.53              \\            QUEST            & 2.46  & 20.54 & 3.30 & 27.49              \\            ROLEQ            & 0.78  & 6.54 & 0.84 & 6.98              \\            SAAM            & 0.87  & 7.24 & 1.10 & 9.16              \\            Tilt            & 0.87  & 7.24 & 1.10 & 9.16              \\
+                \hline
+                Average     & 2.07                    & 17.29                  & 2.83            & 23.60
+            \end{tabular}
+        }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
     \end{center}
