--- a/tables/lines/line28.tex
+++ b/tables/lines/line28.tex
@@ -1,13 +1,15 @@
 \begin{table}[H]
     \begin{center}
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 4.12  & 14.73 & 4.78 & 17.08              \\            AQUA            & 3.80  & 13.56 & 5.38 & 19.20              \\            Complementary            & 3.82  & 13.63 & 18.31 & 65.40              \\            Davenport            & 3.86  & 13.79 & 5.47 & 19.53              \\            EKF            & 3.88  & 13.85 & 4.35 & 15.55              \\            FAMC            & 3.82  & 13.63 & 4.33 & 15.45              \\            FLAE            & 3.86  & 13.79 & 5.47 & 19.53              \\            Fourati            & 8.74  & 31.22 & 18.33 & 65.46              \\            Madgwick            & 3.81  & 13.61 & 4.29 & 15.32              \\            Mahony            & 3.81  & 13.61 & 4.19 & 14.98              \\            OLEQ            & 3.84  & 13.71 & 3.44 & 12.30              \\            QUEST            & 4.35  & 15.55 & 12.25 & 43.75              \\            ROLEQ            & 3.88  & 13.87 & 5.45 & 19.48              \\            SAAM            & 3.81  & 13.60 & 4.23 & 15.09              \\            Tilt            & 3.81  & 13.60 & 4.23 & 15.09              \\
-            \hline
-            Average & 4.21 & 15.05 & 6.97 & 24.88
-        \end{tabular}
+        \resizebox{1\linewidth}{!}{
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 1.29                    & 4.61                   & 6.08            & 21.73          \\            AQUA            & 0.91  & 3.24 & 5.48 & 19.59              \\            Complementary            & 0.52  & 1.86 & 4.31 & 15.41              \\            Davenport            & 0.73  & 2.60 & 5.47 & 19.53              \\            EKF            & 0.83  & 2.95 & 4.35 & 15.55              \\            FAMC            & 0.50  & 1.80 & 4.33 & 15.45              \\            FLAE            & 0.73  & 2.59 & 5.47 & 19.53              \\            Fourati            & 1.07  & 3.81 & 6.21 & 22.18              \\            Madgwick            & 0.55  & 1.96 & 4.29 & 15.32              \\            Mahony            & 0.52  & 1.87 & 4.19 & 14.98              \\            OLEQ            & 0.69  & 2.47 & 5.35 & 19.11              \\            QUEST            & 3.02  & 10.80 & 11.72 & 41.87              \\            ROLEQ            & 0.83  & 2.95 & 5.39 & 19.24              \\            SAAM            & 0.51  & 1.81 & 4.23 & 15.09              \\            Tilt            & 0.51  & 1.81 & 4.23 & 15.09              \\
+                \hline
+                Average     & 0.88                    & 3.14                   & 5.41            & 19.31
+            \end{tabular}
+        }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
     \end{center}
