--- a/tables/lines/line4.tex
+++ b/tables/lines/line4.tex
@@ -1,13 +1,15 @@
 \begin{table}[H]
     \begin{center}
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 0.70  & 17.43 & 0.50 & 12.62              \\            AQUA            & 1.11  & 27.82 & 2.23 & 55.63              \\            Complementary            & 0.69  & 17.30 & 2.50 & 62.50              \\            Davenport            & 0.91  & 22.65 & 0.64 & 16.02              \\            EKF            & 1.97  & 49.29 & 1.41 & 35.35              \\            FAMC            & 0.70  & 17.49 & 0.50 & 12.57              \\            FLAE            & 0.91  & 22.66 & 0.64 & 16.04              \\            Fourati            & 2.95  & 73.83 & 2.50 & 62.59              \\            Madgwick            & 1.07  & 26.70 & 0.72 & 17.99              \\            Mahony            & 0.69  & 17.17 & 0.55 & 13.80              \\            OLEQ            & 0.67  & 16.73 & 0.43 & 10.75              \\            QUEST            & 1.01  & 25.15 & 1.10 & 27.38              \\            ROLEQ            & 0.64  & 16.06 & 0.31 & 7.75              \\            SAAM            & 0.79  & 19.83 & 0.55 & 13.82              \\            Tilt            & 0.79  & 19.83 & 0.55 & 13.82              \\
-            \hline
-            Average & 1.04 & 26.00 & 1.01 & 25.24
-        \end{tabular}
+        \resizebox{1\linewidth}{!}{
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 0.16                    & 3.90                   & 0.50            & 12.62          \\            AQUA            & 0.90  & 22.59 & 1.46 & 36.50              \\            Complementary            & 0.25  & 6.23 & 0.55 & 13.66              \\            Davenport            & 0.49  & 12.28 & 0.64 & 16.02              \\            EKF            & 1.63  & 40.64 & 1.41 & 35.35              \\            FAMC            & 0.17  & 4.25 & 0.50 & 12.57              \\            FLAE            & 0.49  & 12.29 & 0.64 & 16.04              \\            Fourati            & 0.32  & 8.01 & 0.54 & 13.39              \\            Madgwick            & 0.74  & 18.57 & 0.74 & 18.51              \\            Mahony            & 0.34  & 8.56 & 0.55 & 13.80              \\            OLEQ            & 0.13  & 3.24 & 0.41 & 10.28              \\            QUEST            & 0.78  & 19.62 & 0.96 & 24.00              \\            ROLEQ            & 0.16  & 4.05 & 0.24 & 6.06              \\            SAAM            & 0.34  & 8.53 & 0.55 & 13.82              \\            Tilt            & 0.34  & 8.53 & 0.55 & 13.82              \\
+                \hline
+                Average     & 0.48                    & 12.09                  & 0.68            & 17.10
+            \end{tabular}
+        }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
     \end{center}
