--- a/tables/squares/square16.tex
+++ b/tables/squares/square16.tex
@@ -1,13 +1,15 @@
 \begin{table}[H]
     \begin{center}
-        \begin{tabular}[t]{lcccc}
-            \hline
-            Algorithm                   & Displacement Error[$m$] & Displacement Error[\%]      & Turn Error[$m$]  & Turn Error[\%]             \\
-            \hline 
-            AngularRate            & 29.43  & 45.99 & 35.94 & 56.16              \\            AQUA            & 19.83  & 30.99 & 19.41 & 30.33              \\            Complementary            & 10.27  & 16.05 & 10.00 & 15.62              \\            Davenport            & 12.95  & 20.23 & 12.29 & 19.20              \\            EKF            & 11.49  & 17.95 & 8.76 & 13.68              \\            FAMC            & 29.13  & 45.52 & 34.52 & 53.94              \\            FLAE            & 13.22  & 20.66 & 12.28 & 19.19              \\            Fourati            & 28.71  & 44.85 & 34.08 & 53.24              \\            Madgwick            & 12.60  & 19.69 & 9.32 & 14.56              \\            Mahony            & 11.57  & 18.08 & 10.81 & 16.90              \\            OLEQ            & 12.31  & 19.24 & 10.24 & 15.99              \\            QUEST            & 25.38  & 39.66 & 31.03 & 48.49              \\            ROLEQ            & 12.50  & 19.53 & 11.54 & 18.03              \\            SAAM            & 13.39  & 20.92 & 12.53 & 19.58              \\            Tilt            & 13.39  & 20.92 & 12.53 & 19.58              \\
-            \hline
-            Average & 17.08 & 26.69 & 17.68 & 27.63
-        \end{tabular}
+        \resizebox{1\linewidth}{!}{
+            \begin{tabular}[t]{lcccc}
+                \hline
+                Algorithm   & Displacement Error[$m$] & Displacement Error[\%] & Turn Error[$m$] & Turn Error[\%] \\
+                \hline
+                AngularRate & 21.40                   & 33.43                  & 27.65           & 43.20          \\            AQUA            & 9.62  & 15.03 & 10.47 & 16.35              \\            Complementary            & 6.52  & 10.19 & 9.07 & 14.18              \\            Davenport            & 9.11  & 14.23 & 9.60 & 15.00              \\            EKF            & 1.54  & 2.40 & 2.03 & 3.18              \\            FAMC            & 19.84  & 30.99 & 25.26 & 39.47              \\            FLAE            & 9.61  & 15.01 & 9.56 & 14.94              \\            Fourati            & 18.54  & 28.97 & 23.98 & 37.46              \\            Madgwick            & 9.38  & 14.66 & 7.58 & 11.84              \\            Mahony            & 1.73  & 2.71 & 2.07 & 3.23              \\            OLEQ            & 2.16  & 3.38 & 2.86 & 4.47              \\            QUEST            & 15.99  & 24.99 & 21.68 & 33.88              \\            ROLEQ            & 2.29  & 3.58 & 2.72 & 4.25              \\            SAAM            & 9.67  & 15.11 & 9.80 & 15.31              \\            Tilt            & 9.67  & 15.11 & 9.80 & 15.31              \\
+                \hline
+                Average     & 9.80                    & 15.32                  & 11.61           & 18.14
+            \end{tabular}
+        }
         \caption{Accelerometer Specifications. }
         \label{tab:accelerometer_specification}
     \end{center}
